[package]
name = "mcp346x"
version = "0.1.0"
edition = "2021"
authors = ["Max Zander <hi@zdmx.me>"]
license = "MIT"
keywords = ["mcp3461", "microchip", "driver", "adc", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "=1.0.0-alpha.5"
measurements = "0.11"
crc16 = "0.4.0"
bitflags = "1.3"

[profile.release]
lto = true
